bk_ida/gccida/g2/dwarf2out_decl
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_decl/src/dwarf2out.c:12076:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_decl/src/dwarf2out.c:12088:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_decl/src/dwarf2out.c:12107:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_decl/src/dwarf2out.c:12142:19: error: use of undeclared identifier 'debug_info_level_0'
&& ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_decl/src/obj/dwarf2out.o] Error 1
